# bedrock-up

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: linux.yml  rust.yml  win.yml  windows.yml
src/: README.md  args.rs  main.rs  updater.rs
