[package]
name = "bedrock-up"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde_json = "1.0.140"
shellexpand = "3.1.1"
zip = "4.2.0"

[dev-dependencies]
mockito = "1.5.0"
tempfile = "3.8.0"
